# loco-math

./: .clang-tidy  .cmake-format.py  .cmake-format.yaml  .dockerignore  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CPPLINT.cfg  DEVELOPER.md  Dockerfile  MANIFEST.in  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: cd-deploy-manylinux-pypi.yml  cd-deploy-sdist-pypi.yml  cd-deploy-windows-pypi.yml  ci-linux.yml  ci-macos.yml  ci-windows.yml  deploy-pypi.yml
cmake/: Common.cmake  FindSphinx.cmake  LocoMathDependencies.cmake  MathDependencies.cmake  Utils.cmake  check_simd_x86.cpp
docs/: CMakeLists.txt  Doxyfile.in  References.md  conf.py  conf.py.in  index.rst
docs/dashboard/: README.md
docs/intro/: index.rst  installation.rst  overview.rst
docs/notes/: info_avx.md  info_sfinae.md  info_sse.md
docs/reference/: index.rst  reference_cpp.rst  reference_python.rst
docs/reference/types/: matrix2.rst  matrix3.rst  matrix4.rst  vector2.rst  vector3.rst  vector4.rst
docs/user/: index.rst  matrices.rst  vectors.rst
examples/cpp/: CMakeLists.txt  example_euler_conversions.cpp  example_lerp_vec2.cpp  example_lerp_vec3.cpp  example_lerp_vec4.cpp  example_mat2.cpp  example_mat2_constructors.cpp  example_mat2_operations.cpp  example_mat3.cpp  example_mat3_constructors.cpp  example_mat3_operations.cpp  example_mat4.cpp  example_mat4_constructors.cpp  example_mat4_operations.cpp  example_transforms.cpp  example_vec2_constructors.cpp  example_vec2_operations.cpp  example_vec3_constructors.cpp  example_vec3_operations.cpp  example_vec4.cpp  example_vec4_constructors.cpp  example_vec4_operations.cpp  example_vec_const.cpp  test_mat3.cpp  test_mat4.cpp  test_transforms.cpp  test_vec3.cpp
examples/cpp/operations/: ex_vec3f_ops.cpp
examples/python/: examples_functions.ipynb  examples_matrices.ipynb  examples_quaternions.ipynb  examples_vectors.ipynb  python_examples.ipynb  tinymath_matrices.ipynb  tinymath_transforms.ipynb  tinymath_vectors.ipynb
ext/: CMakeLists.txt
include/: common.h  matrix_t.h  matrix_t_bp.h  transforms.h  vector_t.h  vector_t_bp.h  vectors.h
include/loco/math/: all.hpp  common.hpp  mat2_t.hpp  mat2_t_impl.hpp  mat3_t.hpp  mat3_t_impl.hpp  mat4_t.hpp  mat4_t_impl.hpp  quat_t.hpp  quat_t_impl.hpp  vec2_t.hpp  vec2_t_impl.hpp  vec3_t.hpp  vec3_t_impl.hpp  vec4_t.hpp  vec4_t_impl.hpp
include/math/: common.hpp  euler_t.hpp  euler_t_decl.hpp  mat2_t.hpp  mat2_t_decl.hpp  mat3_t.hpp  mat3_t_decl.hpp  mat4_t.hpp  mat4_t_decl.hpp  pose3d_t.hpp  pose3d_t_decl.hpp  quat_t.hpp  quat_t_decl.hpp  vec2_t.hpp  vec2_t_decl.hpp  vec3_t.hpp  vec3_t_decl.hpp  vec4_t.hpp  vec4_t_decl.hpp
include/math/impl/: mat2_t_avx_impl.hpp  mat2_t_scalar_impl.hpp  mat2_t_sse_impl.hpp  mat3_t_avx_impl.hpp  mat3_t_scalar_impl.hpp  mat3_t_sse_impl.hpp  mat4_t_avx_impl.hpp  (+13 more)
include/tinymath/: common.hpp  mat4_t.hpp  mat4_t_impl.hpp  tinymath.hpp  vec2_t.hpp  vec2_t_impl.hpp  vec3_t.hpp  vec3_t_impl.hpp  vec4_t.hpp  vec4_t_impl.hpp
legacy/include/: common.h  matrix_t.h  vector_t.h
legacy/python/: CMakeLists.txt
legacy/python/include/: bindings_all.h  bindings_common.h  bindings_matrix_t.h  bindings_transforms.h  bindings_vector_t.h
legacy/python/src/: bindings_all.cpp  bindings_common.cpp  bindings_matrix_t_impl.hpp  bindings_transforms_impl.hpp  bindings_vector_t_impl.hpp
legacy/src/: matrix_t_spec.cpp  transforms_impl.hpp  vector_t_impl.hpp
python/: CMakeLists.txt  py_bindings.cpp  py_common.h  py_vectors.cpp  py_vectors.h
python/include/: bindings_all.h  bindings_matrix_t.h  bindings_transforms.h  bindings_vector_t.h  bindings_vector_t_bp.h  py_bindings.h  py_vectors.h
python/loco/math/bindings/: CMakeLists.txt  bindings_py.cpp
python/math/: CMakeLists.txt  bindings_py.cpp  common_py.hpp  conversions_py.hpp  mat2_py.hpp  mat3_py.hpp  mat4_py.hpp  quat_py.hpp  vec2_py.hpp  vec3_py.hpp  vec4_py.hpp
python/math3d/: __init__.py  mat4_py.hpp
python/math3d/bindings/: CMakeLists.txt  bindings_py.cpp  common_py.hpp  conversions_py.cpp  conversions_py.hpp  euler_py.hpp  mat2_functions_py.cpp  mat2_py.hpp  mat3_functions_py.cpp  mat3_py.hpp  mat4_functions_py.cpp  mat4_py.hpp  pose3d_py.hpp  quat_py.hpp  vec2_functions_py.cpp  vec2_py.hpp  vec3_functions_py.cpp  vec3_py.hpp  vec4_functions_py.cpp  vec4_py.hpp
python/math3d/bindings/utils/: geometry_helpers_py.hpp
python/math3d/typings/: math3d.pyi
python/src/: bindings_all.cpp  bindings_common.cpp  bindings_matrix_t_impl.hpp  bindings_transforms_impl.hpp  bindings_vector_t.cpp  bindings_vector_t_impl.hpp  bindings_vector_t_impl_bp.hpp  py_bindings.cpp  py_common.cpp  py_vectors.cpp
python/tests/: CMakeLists.txt  test_1.cpp
python/tinymath/bindings/: CMakeLists.txt  bindings_py.cpp
scripts/: setup_dependencies.sh
src/: common.cpp  common_impl.hpp  matrix_t_impl.hpp  matrix_t_impl_bp.hpp  tinymath.cpp  transforms_impl.hpp  vector_t.cpp  vector_t_impl.hpp  vector_t_spec.cpp  vectors.cpp
src/tinymath/: vec3_t.cpp  vec4_t.cpp
tests/: CMakeLists.txt  test_mat2.cpp  test_mat4.cpp  test_matrix_constructors.py  test_transforms.cpp  test_vec2.cpp  test_vec3.cpp  test_vec4.cpp
tests/cpp/: .clang-tidy  CMakeLists.txt  common_math_generators.hpp  common_math_helpers.hpp  test_euler_type.cpp  test_geometry_helpers.cpp  test_lerp_vec2.cpp  test_lerp_vec3.cpp  test_lerp_vec4.cpp  test_mat2_functions.cpp  test_mat2_operations.cpp  test_mat2_type.cpp  test_mat3_functions.cpp  test_mat3_operations.cpp  test_mat3_type.cpp  test_mat4_functions.cpp  test_mat4_operations.cpp  test_mat4_type.cpp  test_pose3d_type.cpp  test_quat_operations.cpp  test_quat_type.cpp  test_utils_spherical_coordinates.cpp  test_vec2_operations.cpp  test_vec2_type.cpp  test_vec3_operations.cpp  test_vec3_type.cpp  test_vec4_operations.cpp  test_vec4_type.cpp
tests/python/: conversions_test.py  euler_test.py  geometry_helpers_test.py  mat2_test.py  mat3_test.py  mat4_test.py  pose3d_test.py  quat_test.py  vec2_test.py  vec3_test.py  vec4_test.py
typings/: math3d.pyi
(+41 files in other folders)
