[metadata]
name = math3d
version = 0.5.0
description = A math library for small vectors and matrices
long_description = file: README.md
long_description_content_type = text/markdown
author = Wilbert Santos Pumacay Huallpa
license = MIT License
author_email = wpumacay@gmail.com
url = https://github.com/wpumacay/loco-math
keywords = math
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux

[options]
zip_safe = False
packages = find:
package_dir = =python
python_requires = >=3.7

[options.packages.find]
where = python

[flake8]
exclude =
    .git
    __pycache__,
    build,
    dist,
    docs,
    venv

max-line-length = 80
